TS-4956: Memory leaks in hostdb test