iocore/hostdb/test_RefCountCache.cc
@@ -26,6 +26,7 @@
 #include <I_EventSystem.h>
 #include <ts/I_Layout.h>
 #include <diags.i>
+#include <set>
 
 // TODO: add tests with expiry_time
 
@@ -34,6 +35,7 @@ class ExampleStruct : public RefCountObj
 public:
   int idx;
   int name_offset; // pointer addr to name
+  static std::set<ExampleStruct *> items_freed;
 
   // Return the char* to the name (TODO: cleaner interface??)
   char *
@@ -48,11 +50,20 @@ public:
     return new (malloc(sizeof(ExampleStruct) + size)) ExampleStruct();
   }
 
-  // To mark it as "deleted" (so its easy to check) we'll just mark the idx as -1
+  static void
+  dealloc(ExampleStruct *e)
+  {
+    e->~ExampleStruct();
+    ::free(e);
+  }
+
+  // Really free the memory, we can use asan leak detection to verify it was freed
   void
   free()
   {
     this->idx = -1;
+    items_freed.insert(this);
+    printf("freeing: %p items_freed.size(): %zd\n", this, items_freed.size());
   }
 
   static ExampleStruct *
@@ -69,6 +80,8 @@ public:
     return ret;
   }
 };
+
+std::set<ExampleStruct *> ExampleStruct::items_freed;
 
 void
 fillCache(RefCountCache<ExampleStruct> *cache, int start, int end)
@@ -166,6 +179,8 @@ testRefcounting()
   ret |= tmpAfter.get()->idx != 1;
   printf("ret=%d ref=%d\n", ret, tmp->refcount());
 
+  delete cache;
+
   return ret;
 }
 
@@ -189,7 +204,7 @@ testclear()
 }
 
 int
-main()
+test()
 {
   // Initialize IOBufAllocator
   RecModeT mode_type = RECM_STAND_ALONE;
@@ -264,7 +279,22 @@ main()
   // printf("Sync return: %d\n", cache->sync_all());
 
   printf("TestRun: %d\n", ret);
-  exit(ret);
+
+  delete cache;
+
+  return ret;
+}
+
+int
+main()
+{
+  int ret = test();
+
+  for (const auto item : ExampleStruct::items_freed) {
+    printf("really freeing: %p\n", item);
+    ExampleStruct::dealloc(item);
+  }
+  ExampleStruct::items_freed.clear();
 
   return ret;
 }
